Use our custom lager with truncation size support for now

--- a/travelstar/rebar.config
+++ b/travelstar/rebar.config
@@ -1,13 +1,11 @@
+{deps, [
+    {lager, ".*", {git, "git@github.com:devinus/lager.git", {branch, "truncation-size"}}}
+]}.
 {erl_opts, [
     warnings_as_errors,
-    {parse_transform, lager_transform}
+    {parse_transform, lager_transform},
+    {lager_truncation_size, 10485760}
 ]}.
-
 {eunit_opts, [verbose]}.
 {cover_enabled, true}.
-
-{deps, [
-    {lager, ".*", {git, "git://github.com/basho/lager.git"}}
-]}.
-
 {sub_dirs, ["rel"]}.
