Use official lager repo

--- a/travelstar/rebar.config
+++ b/travelstar/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-    {lager, ".*", {git, "git@github.com:devinus/lager.git", {branch, "truncation-size"}}}
+    {lager, ".*", {git, "git://github.com/basho/lager.git"}}
 ]}.
 {erl_opts, [
     warnings_as_errors,
